--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,18 +10,24 @@
       </ul>
   </div>
 </nav>
---><nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+-->
+
+<!--<app-test-component [testInput]="'fooBar'"></app-test-component>--> 
+<!--<app-clock [initialDateInput]="dateInput" [taskName]="newTaskName"></app-clock>--> 
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <i class="fa fa-h-square webTitle colorWhite"></i>
-  <div class="col-md-8 centerText navbar-brand" href="#">Navbar of awesomeness</div>
+  <div class="col-md-6 centerText navbar-brand" href="#">Navbar of awesomeness</div>
   <div class="collapse navbar-collapse " id="navbarNav">
       <ul class="nav navbar-nav verticalAlignCenter" routerLinkActive="active">
           <li class="nav-item"><a class="nav-link" routerLink="home"><i class="fa fa-home colorWhite"></i>Home</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="formValidation"><i class="fas fa-graduation-cap colorWhite"></i>Form Validation</a></li>
           <li class="nav-item"><a class="nav-link" routerLink="gallery"><i class="fas fa-image colorWhite"></i>Gallery</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="contact"><i class="fas fa-book colorWhite"></i>Contact</a></li>
+         <!-- <li class="nav-item"><a class="nav-link" routerLink="contact"><i class="fas fa-book colorWhite"></i>Contact</a></li> -->
       </ul>
+      <!--<app-clock [dataInput]="inputObjectNew"></app-clock> -->
   </div>
 </nav>
+<app-clock [dataInput]="inputObjectNew"></app-clock>
 <!-- container -->
 <div class="col-md-8 centerDiv" style="margin-top: 10px">
   <router-outlet></router-outlet>
