--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,7 @@
   </div>
 </nav>
 <app-clock [dataInput]="inputObjectNew"></app-clock>
+<app-shop></app-shop>
 <!-- container -->
 <div class="col-md-8 centerDiv" style="margin-top: 10px">
   <router-outlet></router-outlet>
