--- a/src/app/components/clock/clock.component.html
+++ b/src/app/components/clock/clock.component.html
@@ -24,11 +24,12 @@
     </div>
 </div>
 <p id="tooltip" class="Hidden">{{dataInput.Issue.IssueName}}</p>
+<!--
 <div class="marginLeft" *ngFor="let test of testArray">
     <p class="noneMargin">{{test}}</p>
 </div>
 <p class="marginLeft">Result1: {{resultSum}}</p>  
-<p class="marginLeft">Result2: {{resultSum2}}</p>  
+<p class="marginLeft">Result2: {{resultSum2}}</p>  -->
 <!--
 <div class="parentTest">
     <div class= "child"></div>
