--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,8 +1,35 @@
 <div class="marginLeft">
-  shop works!
-  <div *ngFor="let goal of goals">
-    <p class="noneMargin">{{goal}}</p>
+  <h3>Shop component</h3>
+  <button (click)="getData()">Get data</button>
+  <h4>Last added product: {{ lastProductName$ | async }}</h4>
+  <table class="table table-striped table-hover">
+    <tr>
+      <th>Name</th>
+      <th>Cateogry</th>
+      <th>Unit prize</th>
+      <th>Amount</th>
+      <th></th>            
+    </tr>
+    <tr *ngFor="let product of avaibleProd$ | async;index as i">
+      <td>{{product.name}}</td>
+      <td>{{product.category}}</td>
+      <td>{{product.prize | number: '.2'}}zł</td>
+      <td><input type="number" [(ngModel)] = "product.amount"/></td>
+      <td>
+          <button (click)="addItem(i)">Add</button>
+      </td>            
+    </tr>
+  </table>
+
+  <h6>Products with discount:</h6>
+  <div *ngFor="let product of discountProducts$ | async;index as i">
+    <p class="noneMargin">{{product.name}}</p>
   </div>
-  <button (click)="addItem()">Add</button>
-  <button (click)="removeItem(2)">Remove</button>  
+
+  <!--
+  <div *ngFor="let basketProd  of avaibleProd | async">
+    <p>Name: {{basketProd.name}}</p>
+  </div>      -->
+<!--  <p>Test:{{someVar[0]}}</p> -->
+  <p>TestVal: {{testVal}}</p>
 </div>
